[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprites/enemy_mech.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/enemy_mech_gun.png" type="Texture" id=2]
[ext_resource path="res://Enemies/enemy_mech.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 67.082

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 31 )

[node name="enemy_mech" type="KinematicBody2D"]
collision_layer = 1041
script = ExtResource( 3 )
hp = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
frame = 1
playing = true
flip_h = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 1.25, 0.08 )
texture = ExtResource( 2 )
offset = Vector2( 10, -30 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 256

[node name="BulletSpawn" type="Node2D" parent="RayCast2D"]
position = Vector2( 15, 0 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.4

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
